// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a contract address 1`] = `
AztecAddress {
  "buffer": {
    "data": [
      17,
      160,
      201,
      96,
      127,
      185,
      91,
      146,
      4,
      147,
      169,
      211,
      33,
      226,
      156,
      174,
      240,
      174,
      157,
      149,
      81,
      249,
      149,
      226,
      160,
      18,
      239,
      108,
      218,
      140,
      217,
      137,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Fr {
  "value": 16977277925454205296890617263907769463254781689473762721237698889614686866498n,
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes commitment nonce 1`] = `
Fr {
  "value": 13496027098354931963552650893736311555066207973436318315473061104559483240114n,
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 14753252017424563237038015065402454919037294146339173328174383872613705551896n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Fr {
  "value": 10347099364184817470749359182712341488544005132594679915946302065868679911885n,
}
`;

exports[`abis wasm bindings computes siloed commitment 1`] = `
Fr {
  "value": 16534789767920606571541683139317465939081284769910575930923078591683356873433n,
}
`;

exports[`abis wasm bindings computes siloed nullifier 1`] = `
Fr {
  "value": 4957445512951137590281746823314455197982530036508465893793736233926551006579n,
}
`;

exports[`abis wasm bindings computes unique commitment 1`] = `
Fr {
  "value": 4300635537850003871451650912699252898033249035618622792407744400807361159458n,
}
`;

exports[`abis wasm bindings hashes VK 1`] = `
{
  "data": [
    18,
    27,
    182,
    124,
    37,
    144,
    241,
    62,
    203,
    104,
    141,
    178,
    22,
    93,
    79,
    221,
    21,
    63,
    245,
    104,
    71,
    249,
    55,
    250,
    39,
    168,
    54,
    232,
    57,
    46,
    130,
    254,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
{
  "data": [
    32,
    25,
    83,
    68,
    20,
    2,
    71,
    30,
    241,
    52,
    99,
    157,
    202,
    119,
    186,
    154,
    22,
    122,
    199,
    176,
    121,
    215,
    85,
    13,
    228,
    82,
    129,
    89,
    153,
    131,
    233,
    177,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes constructor info 1`] = `
Fr {
  "value": 11423915673915198290300367851881125996395433281184245872633888457016608552774n,
}
`;

exports[`abis wasm bindings hashes empty function args 1`] = `
Fr {
  "value": 0n,
}
`;

exports[`abis wasm bindings hashes function args 1`] = `
Fr {
  "value": 18906676604864959005173276375312600640969342814693694325262988108261136820631n,
}
`;

exports[`abis wasm bindings hashes many function args 1`] = `
Fr {
  "value": 16458590480032755384470108712609389694120470087885514794475677859856835664159n,
}
`;
